# vtkCoplanarSurfaceExtractor

./: .gitignore  CMakeLists.txt  CoplanarSurfaceExtractor.cxx  TestCoplanarSurfaceExtractor.cxx  todo  vtkCoplanarSurfaceExtractor.cxx  vtkCoplanarSurfaceExtractor.h
testing/mc-surf_tests/: particle_1335-1474.vtp  particle_1335_raw.vtp  particle_1474_raw.vtp
testing/triangle_tests/: triangles_6intersections_02_0001-0002.vtp  triangles_6intersections_02_0001.vtp  triangles_6intersections_02_0002.vtp  triangles_corner-on-corner_02_0001-0002.vtp  triangles_corner-on-corner_02_0001.vtp  triangles_corner-on-corner_02_0002.vtp  triangles_inside_01_0001-0002.vtp  triangles_inside_01_0001.vtp  triangles_inside_01_0002.vtp  triangles_inside_02_0001-0002.vtp  triangles_inside_02_0001.vtp  triangles_inside_02_0002.vtp  triangles_overlaping_0001-0002.vtp  triangles_overlaping_0001.vtp  triangles_overlaping_0002.vtp  triangles_overlaping_03_0001.vtp  triangles_overlaping_03_0002.vtp  triangles_overlaping_3D_03_0001-0003_right.vtp  triangles_overlaping_3D_03_0001-0003_wrong.vtp  triangles_overlaping_3D_03_0003.vtp
